Se  crea un ejecutable con el runtime